--- a/styles/_typefaces.scss
+++ b/styles/_typefaces.scss
@@ -1,32 +1,32 @@
-$font-family: Montserrat,
-sans-serif;
+$font-family: Montserrat, sans-serif;
 @mixin fontTitle {
-    font-family: $font-family;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
-    font-size: 24px;
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 84px;
+  font-size: 70px;
+  color: $primary-color;
 }
 
 @mixin fontLabel {
-    font-family: $font-family;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 24px;
-    font-size: 16px;
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 24px;
+  font-size: 16px;
 }
 
 @mixin fontBody {
-    font-family: $font-family;
-    font-style: normal;
-    font-weight: normal;
-    line-height: 20px;
-    font-size: 14px;
+  font-family: $font-family;
+  font-style: normal;
+  font-weight: normal;
+  line-height: 20px;
+  font-size: 14px;
 }
 
 @mixin fontError {
-    font-family: $font-family;
-    font-weight: 400;
-    line-height: 20px;
-    font-size: 10px;
+  font-family: $font-family;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 10px;
 }
